<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".UploadUserDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/u_user_avata"
            android:layout_width="@dimen/nav_welcome_avata_size"
            android:layout_height="@dimen/nav_welcome_avata_size"
            android:src="@drawable/user_100px"
            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="2.5dp"
            app:layout_constraintEnd_toStartOf="@id/guideline9"
            app:layout_constraintStart_toEndOf="@id/guideline7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/u_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/avata_added"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@id/guideline9"
            app:layout_constraintStart_toEndOf="@id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/u_user_avata" />

        <TextView
            android:id="@+id/u_change_avata_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/change_avata"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/u_title" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/upload_avata_info"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="13sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/u_complete_btn" />

        <Button
            android:id="@+id/u_complete_btn"
            style="@style/Theme.Be.ButtonSolid"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_button_height"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/complete"
            app:layout_constraintEnd_toStartOf="@+id/guideline9"
            app:layout_constraintStart_toStartOf="@+id/guideline7"
            app:layout_constraintTop_toBottomOf="@+id/u_change_avata_link" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>